--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text agilephd">Jeremy's Changes for Module 1</li>
+          <li class="menu-text agilephd">Jeremy's Changes for Module 1!</li>
         </ul>
       </div>
       <div class="top-bar-right">
